# tadata-python-sdk

./: .coveragerc  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  pytest.ini
.github/workflows/: ci.yml  release.yml
examples/: 01_simple_example.py  deploy_mcp.py  petstore_openapi.json
tadata_sdk/: __init__.py  types.py
tadata_sdk/core/: __init__.py  logger.py  sdk.py
tadata_sdk/errors/: __init__.py  exceptions.py
tadata_sdk/http/: __init__.py  client.py  schemas.py
tadata_sdk/openapi/: __init__.py  source.py
tests/: test_deploy.py  test_openapi_spec.py
